# watchingir

./: .gitignore  Cargo.toml  rustfmt.toml
crates/app/: Cargo.toml
crates/app/src/: error.rs  main.rs  message.rs  state.rs  ui.rs
crates/app/src/ui/: friend.rs  mapper.rs  mod.rs  modal.rs  panel.rs  table.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  setting.rs
crates/common/src/data/: constant.rs  hero.rs  matches.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: courier.rs  error.rs  lib.rs
