[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
config = "0.14.1"
# Mainly for supporting `egui::containers::Modal`
eframe = { git = "https://github.com/emilk/egui", branch = "master" }
egui = { git = "https://github.com/emilk/egui", branch = "master" }
egui_extras = { git = "https://github.com/emilk/egui", branch = "master" }
tokio.workspace = true
toml = "0.8.19"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing.workspace = true

common = { path = "../common" }
server = { path = "../server" }
serde = { version = "1.0.216", features = ["derive"] }
snafu.workspace = true