[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.14.1"
eframe = "0.30.0"
egui = { version = "0.30.0", features = ["deadlock_detection"] }
egui_extras = "0.30.0"
toml = "0.8.19"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }


chrono.workspace = true
ir_aquila.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
snafu.workspace = true
serde_json.workspace = true

common = { path = "../common" }
server = { path = "../server" }